# transit-gap-warsaw

./: .gitignore  README.md  attributions.txt  pyproject.toml
artifacts/figures/: ochota_map.html
artifacts/figures/notebook01/: ochota_map.html
artifacts/models/: xgboost_gap_model.joblib  xgboost_gap_model.json
data/processed/: ochota_stops.csv  ochota_stops_with_amenities.csv  ochota_stops_with_target_var.csv
models/: xgboost_gap_model.joblib  xgboost_gap_model.json
notebooks/01_eda/: 01_gtfs_exploration.ipynb  02_osm_exploration.ipynb  03_osm_eda.ipynb
notebooks/02_feature_engineering/: 01_feature_experiments.ipynb
notebooks/03_evaluation/: 01_baseline_model.ipynb  02_shap_interpretation.ipynb
scripts/: collect_data.py  create_target_variable.py  predict.py  train_model.py
src/: config.py
src/data/: osm_collector.py  validation.py
src/features/: engineering.py
src/models/: train.py
tests/functionality/: test_feature_engineering.py  test_model.py  test_validation.py
tests/predict/: test_paths.py  test_system.py
tests/unit/: test_model.py  test_validation.py
